--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -84,7 +84,7 @@
                         </a>
                         <div class="author-content">
                             <a href="/" class="h4 author-name">{{user.login}}</a>
-                            <div class="country">San Francisco, CA</div>
+                            <div class="country">{{ user.location }}</div>
                         </div>
                     </div>
                 </div>
