add few settings and js for menu

--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -4,8 +4,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xl-9 order-xl-2 col-lg-9 order-lg-2 col-md-12 order-md-1 col-sm-12 col-xs-12">
-                <div class="ui-block">
+            <div class="settings col-xl-9 order-xl-2 col-lg-9 order-lg-2 col-md-12 order-md-1 col-sm-12 col-xs-12">
+                <div class="ui-block account_settings">
                     <div class="ui-block-title">
                         <h6 class="title">Account Settings</h6>
                     </div>
@@ -100,6 +100,226 @@
 
                     </div>
                 </div>
+
+                <div class="ui-block change_password" style="display: none;">
+                    <div class="ui-block-title">
+                        <h6 class="title">Change Password</h6>
+                    </div>
+
+
+                    <div class="ui-block-content">
+
+                    
+                    <!-- Change Password Form -->
+                    
+                    <form>
+                        <div class="row">
+                    
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Confirm Current Password</label>
+                                    <input class="form-control" placeholder="" type="password" value="Olympus-2017">
+                                </div>
+                            </div>
+                    
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating is-empty">
+                                    <label class="control-label">Your New Password</label>
+                                    <input class="form-control" placeholder="" type="password">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating is-empty">
+                                    <label class="control-label">Confirm New Password</label>
+                                    <input class="form-control" placeholder="" type="password">
+                                </div>
+                            </div>
+                    
+                            <div class="col-lg-12 col-sm-12 col-sm-12 col-xs-12">
+                                <div class="remember">
+                    
+                                    <div class="checkbox">
+                                        <label>
+                                            <input name="optionsCheckboxes" type="checkbox">
+                                            Remember Me
+                                        </label>
+                                    </div>
+                    
+                                    <a href="#" class="forgot">Forgot my Password</a>
+                                </div>
+                            </div>
+                    
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <button class="btn btn-primary btn-lg full-width">Change Password Now!</button>
+                            </div>
+                    
+                        </div>
+                    </form>
+                    
+                    <!-- ... end Change Password Form -->
+                    </div>
+                </div>
+
+                <div class="ui-block personal_information" style="display: none;">
+                    <div class="ui-block-title">
+                        <h6 class="title">Personal Information</h6>
+                    </div>
+                    <div class="ui-block-content">
+
+                    
+                    <!-- Personal Information Form  -->
+                    
+                    <form>
+                        <div class="row">
+                    
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating">
+                                    <label class="control-label">First Name</label>
+                                    <input class="form-control" placeholder="" type="text" value="James">
+                                </div>
+                    
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Your Email</label>
+                                    <input class="form-control" placeholder="" type="email" value="jspiegel@yourmail.com">
+                                </div>
+                    
+                                <div class="form-group date-time-picker label-floating">
+                                    <label class="control-label">Your Birthday</label>
+                                    <input name="datetimepicker" value="10/24/1984" />
+                                    <span class="input-group-addon">
+                                                            <svg class="olymp-month-calendar-icon icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-month-calendar-icon"></use></svg>
+                                                        </span>
+                                </div>
+                            </div>
+                    
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Last Name</label>
+                                    <input class="form-control" placeholder="" type="text" value="Spiegel">
+                                </div>
+                    
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Your Website</label>
+                                    <input class="form-control" placeholder="" type="email" value="daydreamzagency.com">
+                                </div>
+                    
+                    
+                                <div class="form-group label-floating is-empty">
+                                    <label class="control-label">Your Phone Number</label>
+                                    <input class="form-control" placeholder="" type="text">
+                                </div>
+                            </div>
+                    
+                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating is-select">
+                                    <label class="control-label">Your Country</label>
+                                    <select class="selectpicker form-control">
+                                        <option value="US">United States</option>
+                                        <option value="AU">Australia</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating is-select">
+                                    <label class="control-label">Your State / Province</label>
+                                    <select class="selectpicker form-control">
+                                        <option value="CA">California</option>
+                                        <option value="TE">Texas</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating is-select">
+                                    <label class="control-label">Your City</label>
+                                    <select class="selectpicker form-control">
+                                        <option value="SF">San Francisco</option>
+                                        <option value="NY">New York</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Write a little description about you</label>
+                                    <textarea class="form-control" placeholder="">Hi, I’m James, I’m 36 and I work as a Digital Designer for the  “Daydreams” Agency in Pier 56</textarea>
+                                </div>
+                    
+                                <div class="form-group label-floating is-select">
+                                    <label class="control-label">Your Gender</label>
+                                    <select class="selectpicker form-control">
+                                        <option value="MA">Male</option>
+                                        <option value="FE">Female</option>
+                                    </select>
+                                </div>
+                    
+                                <div class="form-group label-floating is-empty">
+                                    <label class="control-label">Religious Belifs</label>
+                                    <input class="form-control" placeholder="" type="text">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="form-group label-floating is-empty">
+                                    <label class="control-label">Your Birthplace</label>
+                                    <input class="form-control" placeholder="" type="text">
+                                </div>
+                    
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Your Occupation</label>
+                                    <input class="form-control" placeholder="" type="text" value="UI/UX Designer">
+                                </div>
+                    
+                                <div class="form-group label-floating is-select">
+                                    <label class="control-label">Status</label>
+                                    <select class="selectpicker form-control">
+                                        <option value="MA">Married</option>
+                                        <option value="FE">Not Married</option>
+                                    </select>
+                                </div>
+                    
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Political Incline</label>
+                                    <input class="form-control" placeholder="" type="text" value="Democrat">
+                                </div>
+                            </div>
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group with-icon label-floating">
+                                    <label class="control-label">Your Facebook Account</label>
+                                    <input class="form-control" type="text" value="www.facebook.com/james-spiegel95321">
+                                    <i class="fa fa-facebook c-facebook" aria-hidden="true"></i>
+                                </div>
+                                <div class="form-group with-icon label-floating">
+                                    <label class="control-label">Your Twitter Account</label>
+                                    <input class="form-control" type="text" value="www.twitter.com/james_spiegelOK">
+                                    <i class="fa fa-twitter c-twitter" aria-hidden="true"></i>
+                                </div>
+                                <div class="form-group with-icon label-floating is-empty">
+                                    <label class="control-label">Your RSS Feed Account</label>
+                                    <input class="form-control" type="text">
+                                    <i class="fa fa-rss c-rss" aria-hidden="true"></i>
+                                </div>
+                                <div class="form-group with-icon label-floating">
+                                    <label class="control-label">Your Dribbble Account</label>
+                                    <input class="form-control" type="text" value="www.dribbble.com/thecowboydesigner">
+                                    <i class="fa fa-dribbble c-dribbble" aria-hidden="true"></i>
+                                </div>
+                                <div class="form-group with-icon label-floating is-empty">
+                                    <label class="control-label">Your Spotify Account</label>
+                                    <input class="form-control" type="text">
+                                    <i class="fa fa-spotify c-spotify" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <button class="btn btn-secondary btn-lg full-width">Restore all Attributes</button>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <button class="btn btn-primary btn-lg full-width">Save all Changes</button>
+                            </div>
+                    
+                        </div>
+                    </form>
+                    
+                    <!-- ... end Personal Information Form  -->
+                    </div>
+                </div>
             </div>
 
             <div class="col-xl-3 order-xl-1 col-lg-3 order-lg-1 col-md-12 order-md-2 col-sm-12 col-xs-12 responsive-display-none">
@@ -128,19 +348,19 @@
                                 <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
                                     <ul class="your-profile-menu">
                                         <li>
-                                            <a href="28-YourAccount-PersonalInformation.html">Personal Information</a>
+                                            <a class="clickable" id="personal_information" href="28-YourAccount-PersonalInformation.html">Personal Information</a>
                                         </li>
                                         <li>
-                                            <a href="29-YourAccount-AccountSettings.html">Account Settings</a>
+                                            <a class="clickable" id="account_settings" href="29-YourAccount-AccountSettings.html">Account Settings</a>
                                         </li>
                                         <li>
-                                            <a href="30-YourAccount-ChangePassword.html">Change Password</a>
+                                            <a class="clickable" id="change_password" href="30-YourAccount-ChangePassword.html">Change Password</a>
                                         </li>
                                         <li>
-                                            <a href="31-YourAccount-HobbiesAndInterests.html">Hobbies and Interests</a>
+                                            <a class="clickable" href="31-YourAccount-HobbiesAndInterests.html">Hobbies and Interests</a>
                                         </li>
                                         <li>
-                                            <a href="32-YourAccount-EducationAndEmployement.html">Education and Employement</a>
+                                            <a class="clickable" href="32-YourAccount-EducationAndEmployement.html">Education and Employement</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -148,24 +368,15 @@
                         </div>
 
                         <div class="ui-block-title">
-                            <a href="33-YourAccount-Notifications.html" class="h6 title">Notifications</a>
+                            <a  href="33-YourAccount-Notifications.html" class="h6 title clickable">Notifications</a>
                             <a href="#" class="items-round-little bg-primary">8</a>
                         </div>
                         <div class="ui-block-title">
-                            <a href="34-YourAccount-ChatMessages.html" class="h6 title">Chat / Messages</a>
+                            <a  href="34-YourAccount-ChatMessages.html" class="h6 title clickable">Chat / Messages</a>
                         </div>
                         <div class="ui-block-title">
-                            <a href="35-YourAccount-FriendsRequests.html" class="h6 title">Friend Requests</a>
+                            <a  href="35-YourAccount-FriendsRequests.html" class="h6 title clickable">Friend Requests</a>
                             <a href="#" class="items-round-little bg-blue">4</a>
-                        </div>
-                        <div class="ui-block-title ui-block-title-small">
-                            <h6 class="title">FAVOURITE PAGE</h6>
-                        </div>
-                        <div class="ui-block-title">
-                            <a href="36-FavPage-SettingsAndCreatePopup.html" class="h6 title">Create Fav Page</a>
-                        </div>
-                        <div class="ui-block-title">
-                            <a href="36-FavPage-SettingsAndCreatePopup.html" class="h6 title">Fav Page Settings</a>
                         </div>
                     </div>
 
