add changing password

--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -69,10 +69,7 @@
                                         <a href="#" data-toggle="modal" data-target="#update-header-photo">Update Profile Photo</a>
                                     </li>
                                     <li>
-                                        <a href="#" data-toggle="modal" data-target="#update-header-photo">Update Header Photo</a>
-                                    </li>
-                                    <li>
-                                        <a href="{{ path_for('user.settings') }}">Account Settings</a>
+                                        <a href="{{ path_for('user.settings') }}">Settings</a>
                                     </li>
                                 </ul>
                             </div>
