--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -112,45 +112,30 @@
                     
                     <!-- Change Password Form -->
                     
-                    <form>
+                    <form id="form_change_password">
                         <div class="row">
-                    
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div class="form-group label-floating">
                                     <label class="control-label">Confirm Current Password</label>
-                                    <input class="form-control" placeholder="" type="password" value="Olympus-2017">
+                                    <input name="current" class="form-control" placeholder="" type="password" value="Olympus-2017">
                                 </div>
                             </div>
                     
                             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                 <div class="form-group label-floating is-empty">
                                     <label class="control-label">Your New Password</label>
-                                    <input class="form-control" placeholder="" type="password">
+                                    <input name="new_psw" class="form-control" placeholder="" type="password">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                                 <div class="form-group label-floating is-empty">
                                     <label class="control-label">Confirm New Password</label>
-                                    <input class="form-control" placeholder="" type="password">
+                                    <input name="confirm" class="form-control" placeholder="" type="password">
                                 </div>
                             </div>
-                    
-                            <div class="col-lg-12 col-sm-12 col-sm-12 col-xs-12">
-                                <div class="remember">
-                    
-                                    <div class="checkbox">
-                                        <label>
-                                            <input name="optionsCheckboxes" type="checkbox">
-                                            Remember Me
-                                        </label>
-                                    </div>
-                    
-                                    <a href="#" class="forgot">Forgot my Password</a>
-                                </div>
-                            </div>
-                    
+                                    
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                <button class="btn btn-primary btn-lg full-width">Change Password Now!</button>
+                                <button type="button" class="btn btn-primary btn-lg full-width">Change Password Now!</button>
                             </div>
                     
                         </div>
@@ -348,19 +333,19 @@
                                 <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
                                     <ul class="your-profile-menu">
                                         <li>
-                                            <a class="clickable" id="personal_information" href="28-YourAccount-PersonalInformation.html">Personal Information</a>
+                                            <a class="clickable" id="personal_information" href="#">Personal Information</a>
                                         </li>
                                         <li>
-                                            <a class="clickable" id="account_settings" href="29-YourAccount-AccountSettings.html">Account Settings</a>
+                                            <a class="clickable" id="account_settings" href="#">Account Settings</a>
                                         </li>
                                         <li>
-                                            <a class="clickable" id="change_password" href="30-YourAccount-ChangePassword.html">Change Password</a>
+                                            <a class="clickable" id="change_password" href="#">Change Password</a>
                                         </li>
                                         <li>
-                                            <a class="clickable" href="31-YourAccount-HobbiesAndInterests.html">Hobbies and Interests</a>
+                                            <a class="clickable" href="#">Hobbies and Interests</a>
                                         </li>
                                         <li>
-                                            <a class="clickable" href="32-YourAccount-EducationAndEmployement.html">Education and Employement</a>
+                                            <a class="clickable" href="#">Education and Employement</a>
                                         </li>
                                     </ul>
                                 </div>
