background for profile

--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -10,7 +10,7 @@
             <div class="ui-block">
                 <div class="top-header">
                     <div class="top-header-thumb">
-                        <img src="img/top-header1.jpg" alt="nature">
+                        <img src="img/background_{{ random(2) }}.jpg" alt="nature">
                     </div>
                     <div class="profile-section">
                         <div class="row">
