--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -10,7 +10,7 @@
             <div class="ui-block">
                 <div class="top-header">
                     <div class="top-header-thumb">
-                        <img src="img/background_{{ random(1) + 1 }}.jpg" alt="nature">
+                        <img src="/img/background_{{ random(1) + 1 }}.jpg" alt="nature">
                     </div>
                     <div class="profile-section">
                         <div class="row">
@@ -37,7 +37,7 @@
                                     </li>
                                     <li>
                                         <div class="more">
-                                            <svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
+                                            <svg class="olymp-three-dots-icon"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
                                             <ul class="more-dropdown more-with-triangle">
                                                 <li>
                                                     <a href="#">Report Profile</a>
@@ -54,15 +54,15 @@
 
                         <div class="control-block-button">
                             <a href="35-YourAccount-FriendsRequests.html" class="btn btn-control bg-blue">
-                                <svg class="olymp-happy-face-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use></svg>
+                                <svg class="olymp-happy-face-icon"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use></svg>
                             </a>
 
                             <a href="#" class="btn btn-control bg-purple">
-                                <svg class="olymp-chat---messages-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+                                <svg class="olymp-chat---messages-icon"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
                             </a>
 
                             <div class="btn btn-control bg-primary more">
-                                <svg class="olymp-settings-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-settings-icon"></use></svg>
+                                <svg class="olymp-settings-icon"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-settings-icon"></use></svg>
 
                                 <ul class="more-dropdown more-with-triangle triangle-bottom-right">
                                     <li>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="top-header-author">
                         <a href="02-ProfilePage.html" class="author-thumb">
-                            <img src="img{{ user.img }}" alt="author">
+                            <img src="/img{{ user.img }}" alt="author">
                         </a>
                         <div class="author-content">
                             <a href="/" class="h4 author-name">{{user.login}}</a>
